--- a/package.json
+++ b/package.json
@@ -5,20 +5,28 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "env-cmd": "^10.1.0",
     "gatsby": "^2.23.10",
     "gatsby-image": "^2.4.8",
     "gatsby-plugin-manifest": "^2.4.13",
     "gatsby-plugin-offline": "^3.2.12",
     "gatsby-plugin-react-helmet": "^3.3.5",
     "gatsby-plugin-sharp": "^2.6.13",
+    "gatsby-source-contentful": "^2.3.18",
     "gatsby-source-filesystem": "^2.3.13",
     "gatsby-transformer-sharp": "^2.5.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-slick": "^0.26.1",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.1.1",
+    "styled-icons": "^10.5.0"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
+    "gatsby-plugin-styled-components": "^3.3.6",
     "prettier": "2.0.5"
   },
   "keywords": [
@@ -27,7 +35,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "env-cmd -f .env gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
